[package]
name = "chua4j"
version = "0.1.0"
authors = ["gengteng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "Chua for Java/Android"
homepage = "https://github.com/live2o3/chua4j"
repository = "https://github.com/live2o3/chua4j"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.16.0"
chua = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"
lazy_static = "1.4"
log = "0.4"

[lib]
crate-type = [ "cdylib" ]
